Add simple image styling (centered, 100%, max-width) for markdown images

--- a/creations/templates/speaking_program.html
+++ b/creations/templates/speaking_program.html
@@ -12,7 +12,7 @@ Speaking Program: <i>{{ program.title }}</i>
 
 {% block content %}
 
-<div class="page-section">
+<div class="page-section markdown">
   {{ program.description|markdown }}
 
   {% include 'tags.html' with item=program field=True %}
