--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -34,6 +34,12 @@
     list-style-type: decimal
     list-style-position: inside
 
+  img
+    display: block
+    max-width: 700px
+    width: 100%
+    margin: $whitespace auto
+
 
 .scroll-box
   overflow: scroll
