Add media element to "about laura" primary photo

--- a/website/static/stylesheets/about.sass
+++ b/website/static/stylesheets/about.sass
@@ -8,3 +8,15 @@
     width: 50%
     margin-left: 5%
     margin-right: 5%
+
+  @media (max-width: 900px)
+    #primary-photo
+      float: none
+      width: 100%
+
+    #blurb
+      float: none
+      width: 100%
+      margin-top: $whitespace
+      margin-left: 0px
+      margin-right: 0px
