Don't allow wrapping between radio year and arrow

--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -7,6 +7,8 @@
     color: $chickadee-dark-gray
 
     a
+      white-space: nowrap
+
       &.active:after
         display: inline-block
         position: relative
