--- a/birds/templates/bird.html
+++ b/birds/templates/bird.html
@@ -12,9 +12,7 @@
 
 <div class="page-section">
   {% if bird.main_photo_url %}
-    <div id="main-photo">
-      <img src="{{ bird.main_photo_url }}"/>
-    </div>
+  <img id="main-photo" src="{{ bird.main_photo_url }}"/>
   {% endif %}
 
   <div id="taxonomy" class="card">
