--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -13,7 +13,7 @@
 {% block content %}
 
 <span class="field">
-  {{ program.original_air_date }}
+  {{ program.old_air_date }}
 </span>
 
 <span class="field">
