More air dates chaos.
After seeing downsides of dynamically calculating original air date
as min over all air dates, or hardcoding that in the database (but
complicated cases when creating and deleting air date instances),
decide to just keep the notion of original air date separate from
rerun air dates. This is the beginning of the roll back.

--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -12,9 +12,9 @@
 
 {% block content %}
 
-{% if program.original_air_date %}
+{% if program.orig_air_date %}
 <span class="field">
-  Original Air Date: {{ program.original_air_date.date }}
+  Original Air Date: {{ program.orig_air_date.date }}
 </span>
 {% endif %}
 
