--- a/creations/templates/radio_calendar.html
+++ b/creations/templates/radio_calendar.html
@@ -13,6 +13,12 @@
 {% block content %}
 
 <table>
+  <tr>
+  {% for weekday in weekdays %}
+    <th>{{ weekday }}</th>
+  {% endfor %}
+  </tr>
+
   {% for week in calendar %}
   <tr>
     {% for day, programs in week %}
