Make new/rerun text sublter

--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -102,15 +102,23 @@
     table-layout: fixed
     border-collapse: collapse
 
+    th, td
+      padding: 5px
+
     th
       background: $moss
       color: $chickadee-cream
       font-family: $sans-font-family
+      letter-spacing: 1px
 
     td
-      padding: 5px
       height: 50px
 
       .day
         font-family: $sans-font-family
         font-weight: bold
+
+      .program-type
+        font-family: $sans-font-family
+        color: $chickadee-gray
+        margin-left: 3px
