Minor style edit for new/rerun text

--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -120,5 +120,6 @@
 
       .program-type
         font-family: $sans-font-family
-        color: $chickadee-gray
+        color: $chickadee-dark-gray
+        font-size: $base-font-size - 2
         margin-left: 3px
