Add blog back to menu

--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -25,6 +25,9 @@
       Ways To Help Birds
     </a>
 
+    <a href="http://blog.lauraerickson.com">
+      Blog</a>
+
     <a href="{{ radio_url }}"
         {% ifequal request.path radio_url %}
         class="active"
