--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -113,13 +113,16 @@
 
     td
       height: 50px
+      font-size: $base-font-size - 1
+
+      a, span
+        display: block
 
       .day
         font-family: $sans-font-family
         font-weight: bold
 
       .program-type
+        font-size: $base-font-size - 2
         font-family: $sans-font-family
         color: $chickadee-dark-gray
-        font-size: $base-font-size - 2
-        margin-left: 3px
