Minor radio calendar styling

--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -75,13 +75,6 @@
             margin-top: $whitespace / 2
             line-height: 15px
 
-            .download-link
-              font-size: $base-font-size - 4
-              color: $chickadee-dark-gray
-
-              &:hover
-                color: $chickadee-black
-
           &.transcript
             a
               color: $dark-link-color
@@ -91,6 +84,16 @@
 
           &.tags
             max-width: 600px
+
+
+#radio, #radio-program, #radio-calendar
+  .download-link
+    font-size: $base-font-size - 4
+    color: $chickadee-dark-gray
+
+    &:hover
+      color: $chickadee-black
+
 
 
 #radio-calendar
