--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -2,7 +2,7 @@
 {% load markdown_deux_tags %}
 
 
-{% block body_id %}radio_program{% endblock %}
+{% block body_id %}radio-program{% endblock %}
 
 
 {% block page_title %}
@@ -41,12 +41,11 @@
     <source src="{{ MEDIA_URL }}{{ program.file }}" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
-</div>
-
-<div class="field">
+  <br>
   <a class="download-link"  href="{{ MEDIA_URL }}{{ program.file }}">
     Download .mp3</a>
 </div>
+
 {% endif %}
 
 {% if program.supplemental_content_url %}
