--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -43,13 +43,7 @@
       <div class="program-info">
         {% if program.file %}
         <div class="audio">
-          <audio controls preload="none">
-            <source src="{{ MEDIA_URL }}{{ program.file }}" type="audio/mpeg">
-            Your browser does not support the audio element.
-          </audio>
-          <br>
-          <a class="download-link"  href="{{ MEDIA_URL }}{{ program.file }}">
-            Download .mp3</a>
+          {% include 'audio_with_download.html' with file=program.file %}
         </div>
         {% endif %}
 
