Podcast work. Change original_air_date to air_date

--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -15,6 +15,9 @@
 <a id="calendar-link" href="{% url 'radio_current_calendar_url' %}">
   Click here for calendar</a>
 
+<a id="calendar-link" href="{% url 'podcast_url' %}">
+  Click here for podcast</a>
+
 <div id="all-programs">
   <ul id="year-list">
     {% for year in year_list %}
@@ -25,7 +28,7 @@
     {% endfor %}
   </ul>
 
-  {% regroup programs by original_air_date|date:"Y" as years %}
+  {% regroup programs by air_date|date:"Y" as years %}
   {% for year in years %}
   <ul id="{{ year.grouper }}" class="year-programs">
     {% for program in year.list %}
@@ -33,7 +36,7 @@
       <a class="program-info-button program-title-bar" href="#">
         <span class="title">
           {{ program.title }}
-          ({{ program.original_air_date }})
+          ({{ program.air_date }})
         </span>
         <span class="description">
           {{ program.description|markdown }}
