Move bird search to birds page

--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -2,6 +2,10 @@
   ul
     @include bulleted-list
 
+  #bird-search
+    form
+      margin-bottom: $whitespace / 2
+
 #bird
   #main-photo
     display: block
