--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -347,6 +347,8 @@ html, body {
       list-style-type: square; }
       #birds ul ul ul ul {
         list-style-type: disc; }
+#birds #bird-search form {
+  margin-bottom: 18px; }
 
 #bird #main-photo {
   display: block;
