Style bird search form

--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -6,6 +6,13 @@
     form
       margin-bottom: $whitespace / 2
 
+      p
+        display: inline-block
+
+      .submit
+        margin-left: $whitespace / 4
+
+
 #bird
   #main-photo
     display: block
