--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -443,9 +443,13 @@ html, body {
   #birds-taxonomical .plus-sign.minus::before {
     display: none; }
 
-#radio #calendar-link {
-  display: block;
-  margin-bottom: 18px; }
+#radio #links {
+  width: 100%;
+  float: left;
+  margin-bottom: 36px; }
+  #radio #links a {
+    display: inline-block;
+    margin-right: 18px; }
 #radio #year-list {
   float: left;
   width: 10%;
@@ -466,18 +470,17 @@ html, body {
       -o-transform: scaleX(0.7);
       transform: scaleX(0.7);
       content: "➤"; }
-#radio .year-programs {
+#radio #programs {
   float: right;
-  width: 85%;
-  display: none; }
-  #radio .year-programs .program {
+  width: 85%; }
+  #radio #programs .program {
     float: left;
     width: 100%; }
-    #radio .year-programs .program:nth-child(even) {
+    #radio #programs .program:nth-child(even) {
       background: #e1e6df; }
-    #radio .year-programs .program:nth-child(odd) {
+    #radio #programs .program:nth-child(odd) {
       background: #e9ede8; }
-    #radio .year-programs .program .program-title-bar {
+    #radio #programs .program .program-intro {
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
@@ -485,38 +488,38 @@ html, body {
       width: 100%;
       height: 100%;
       padding: 8px 12px; }
-      #radio .year-programs .program .program-title-bar .title,
-      #radio .year-programs .program .program-title-bar .description {
+      #radio #programs .program .program-intro .title,
+      #radio #programs .program .program-intro .description {
         width: 100%; }
-      #radio .year-programs .program .program-title-bar .title {
+      #radio #programs .program .program-intro .title {
         margin-top: 5px; }
-      #radio .year-programs .program .program-title-bar .description {
+      #radio #programs .program .program-intro .description {
         margin-top: 10px;
         font-size: 15px;
         color: #777e86; }
-      #radio .year-programs .program .program-title-bar a {
+      #radio #programs .program .program-intro a {
         color: #d36760; }
-        #radio .year-programs .program .program-title-bar a:hover {
+        #radio #programs .program .program-intro a:hover {
           color: #d3a060; }
-    #radio .year-programs .program .program-info {
+    #radio #programs .program .program-more {
       display: none;
       padding: 0 0 36px 36px; }
-      #radio .year-programs .program .program-info:after {
+      #radio #programs .program .program-more:after {
         content: "";
         display: table;
         clear: both; }
-      #radio .year-programs .program .program-info div {
+      #radio #programs .program .program-more div {
         width: 100%;
         float: left;
         margin-bottom: 12px; }
-        #radio .year-programs .program .program-info div.audio {
+        #radio #programs .program .program-more div.audio {
           margin-top: 18px;
           line-height: 15px; }
-        #radio .year-programs .program .program-info div.transcript a {
+        #radio #programs .program .program-more div.transcript a {
           color: #d36760; }
-          #radio .year-programs .program .program-info div.transcript a:hover {
+          #radio #programs .program .program-more div.transcript a:hover {
             color: #d3a060; }
-        #radio .year-programs .program .program-info div.tags {
+        #radio #programs .program .program-more div.tags {
           max-width: 600px; }
 
 #radio .download-link img, #radio-program .download-link img {
