--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -67,7 +67,7 @@ h1, h2, h3, h4 {
 h1 {
   font-family: "adelaidaregular", sans-serif; }
 
-h2, h3, h4 {
+h2, h3, h4, .markdown h1 {
   font-family: "Dosis", sans-serif;
   font-weight: 500;
   letter-spacing: 1px;
@@ -77,12 +77,15 @@ h2 {
   font-size: 30px;
   margin-top: -10px; }
 
-h3 {
+h3, .markdown h1 {
   font-size: 26px;
   margin-top: -10px; }
 
-h4 {
+h4, .markdown h2 {
   font-size: 22px; }
+
+.markdown h3, .markdown h4 {
+  font-size: 18px; }
 
 a {
   text-decoration: none;
@@ -94,46 +97,14 @@ a {
   color: #9ba5a9;
   font-style: oblique; }
 
-.markdown h1, .markdown h2, .markdown h3, .markdown h4 {
-  font-family: Georgia, serif;
-  letter-spacing: 0;
-  color: #3c3a47;
-  font-weight: bold;
-  font-variant: normal;
-  margin-top: 36px;
-  margin-bottom: 18px; }
-.markdown h1 {
-  font-size: 29px; }
-.markdown h2 {
-  font-size: 25px; }
-.markdown h3 {
-  font-size: 22px; }
-.markdown h4 {
-  font-size: 20px; }
-.markdown p {
-  margin-bottom: 18px; }
-  .markdown p:last-child {
-    margin-bottom: none; }
-.markdown ul {
-  list-style-type: disc;
-  list-style-position: inside; }
-.markdown ol {
-  list-style-type: decimal;
-  list-style-position: inside; }
-.markdown img {
-  display: block;
-  max-width: 700px;
-  width: 100%;
-  margin: 36px auto; }
-
-.scroll-box {
-  overflow: scroll; }
-
 b, strong {
   font-weight: bold; }
 
 i, em {
   font-style: italic; }
+
+.scroll-box {
+  overflow: scroll; }
 
 .tag {
   position: relative;
@@ -156,6 +127,24 @@ i, em {
   .tag span {
     background: #cfd3cf;
     color: #777e86; }
+
+.markdown h1, .markdown h2, .markdown h3, .markdown h4 {
+  margin-top: 36px; }
+.markdown p, .markdown ul, .markdown ol, .markdown img, .markdown h1, .markdown h2, .markdown h3, .markdown h4 {
+  margin-bottom: 18px; }
+  .markdown p:last-child, .markdown ul:last-child, .markdown ol:last-child, .markdown img:last-child, .markdown h1:last-child, .markdown h2:last-child, .markdown h3:last-child, .markdown h4:last-child {
+    margin-bottom: none; }
+.markdown ul {
+  list-style-type: disc;
+  list-style-position: inside; }
+.markdown ol {
+  list-style-type: decimal;
+  list-style-position: inside; }
+.markdown img {
+  display: block;
+  max-width: 700px;
+  width: 100%;
+  margin: 36px auto; }
 
 html, body {
   min-width: 100%;
@@ -210,30 +199,6 @@ html, body {
   float: left;
   clear: both;
   margin-bottom: 18px; }
-
-#admin-bar {
-  width: 100%;
-  height: 28px;
-  background: #3c3a47;
-  font-family: "Dosis", sans-serif;
-  color: #cfd3cf;
-  font-size: 14px;
-  line-height: 28px;
-  letter-spacing: 0.6px;
-  text-align: left; }
-  #admin-bar span,
-  #admin-bar a {
-    float: left;
-    text-transform: lowercase; }
-  #admin-bar .user {
-    margin: 0 10px; }
-  #admin-bar a {
-    padding: 0 10px; }
-    #admin-bar a:hover {
-      background: rgba(255, 255, 255, 0.1);
-      color: #de8d88; }
-  #admin-bar .logout {
-    float: right; }
 
 #header {
   padding-top: 5px;
@@ -304,6 +269,30 @@ html, body {
     color: #e6a8a4; }
     #footer a:hover, #footer a.active {
       color: #e6c9a4; }
+
+#admin-bar {
+  width: 100%;
+  height: 28px;
+  background: #3c3a47;
+  font-family: "Dosis", sans-serif;
+  color: #cfd3cf;
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: 0.6px;
+  text-align: left; }
+  #admin-bar span,
+  #admin-bar a {
+    float: left;
+    text-transform: lowercase; }
+  #admin-bar .user {
+    margin: 0 10px; }
+  #admin-bar a {
+    padding: 0 10px; }
+    #admin-bar a:hover {
+      background: rgba(255, 255, 255, 0.1);
+      color: #de8d88; }
+  #admin-bar .logout {
+    float: right; }
 
 #home #page-title {
   display: none; }
@@ -556,6 +545,33 @@ html, body {
       font-family: "Dosis", sans-serif;
       color: #777e86; }
 
+#research-categories #content p {
+  display: inline; }
+
+#speaking ul {
+  list-style-position: inside;
+  list-style-type: disc; }
+  #speaking ul li, #speaking ul ul {
+    padding-left: 30px; }
+  #speaking ul ul {
+    list-style-type: circle; }
+    #speaking ul ul ul {
+      list-style-type: square; }
+      #speaking ul ul ul ul {
+        list-style-type: disc; }
+
+#speaking-program #files {
+  list-style-position: inside;
+  list-style-type: disc; }
+  #speaking-program #files li, #speaking-program #files ul {
+    padding-left: 30px; }
+  #speaking-program #files ul {
+    list-style-type: circle; }
+    #speaking-program #files ul ul {
+      list-style-type: square; }
+      #speaking-program #files ul ul ul {
+        list-style-type: disc; }
+
 #writing #books {
   width: 105%;
   padding: 0 2.5%;
@@ -602,33 +618,6 @@ html, body {
   width: 100%;
   clear: both;
   margin-top: 36px; }
-
-#speaking ul {
-  list-style-position: inside;
-  list-style-type: disc; }
-  #speaking ul li, #speaking ul ul {
-    padding-left: 30px; }
-  #speaking ul ul {
-    list-style-type: circle; }
-    #speaking ul ul ul {
-      list-style-type: square; }
-      #speaking ul ul ul ul {
-        list-style-type: disc; }
-
-#speaking-program #files {
-  list-style-position: inside;
-  list-style-type: disc; }
-  #speaking-program #files li, #speaking-program #files ul {
-    padding-left: 30px; }
-  #speaking-program #files ul {
-    list-style-type: circle; }
-    #speaking-program #files ul ul {
-      list-style-type: square; }
-      #speaking-program #files ul ul ul {
-        list-style-type: disc; }
-
-#research-categories #content p {
-  display: inline; }
 
 #ways-to-help #all-ways-to-help {
   width: 105%;
