--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -42,5 +42,6 @@ $card-border-radius: 2px
 @import ../../../creations/static/stylesheets/radio
 @import ../../../creations/static/stylesheets/research
 @import ../../../creations/static/stylesheets/speaking
+@import ../../../creations/static/stylesheets/webpage
 @import ../../../creations/static/stylesheets/writing
 @import ../../../waystohelp/static/stylesheets/waystohelp
