--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -142,8 +142,8 @@ i, em {
   list-style-position: inside; }
 .markdown img {
   display: block;
-  max-width: 700px;
   width: 100%;
+  max-width: 700px;
   margin: 36px auto; }
 
 html, body {
@@ -571,6 +571,18 @@ html, body {
       list-style-type: square; }
       #speaking-program #files ul ul ul {
         list-style-type: disc; }
+
+#webpage #webpage-info {
+  float: left;
+  width: 100%;
+  margin-bottom: 36px; }
+#webpage #webpage-content {
+  float: left;
+  max-width: 750px;
+  width: 100%; }
+#webpage img {
+  max-width: 500px;
+  max-height: 500px; }
 
 #writing #books {
   width: 105%;
